--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://moazzamak.github.io/mak/",
   "hexo": {
-    "version": ""
+    "version": "3.8.0"
   },
   "dependencies": {
     "gh-pages": "^2.0.1",
     "hexo": "^3.7.0",
+    "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
