--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,18 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Delegate MAK's cryptocurrency colloquium
+title: MAK's cryptocurrency colloquium
 subtitle: How the Ark Ecosystem can change the world
 description:
 keywords:
-author: Moazzam Abdullah Khan
+author: MAK
 language:
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
-root: /
+url: https://moazzamak.github.io/mak
+root: /mak/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -73,7 +73,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: cactus
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
