--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: MAK's cryptocurrency colloquium
-subtitle: How the Ark Ecosystem can change the world
+title: MAK's den
+subtitle: Distilled chaos
 description:
 keywords:
 author: MAK
